fix: Display close icon in dark mode

--- a/src/components/Do/Do.css
+++ b/src/components/Do/Do.css
@@ -1,7 +1,7 @@
 .do {
   padding: 1rem 0.75rem;
   border-radius: 0.25rem;
-  border-top: 1px solid var(--l-grayblue);
+  border-bottom: 1px solid var(--l-grayblue);
   display: flex;
   justify-content: space-between;
 }
@@ -22,4 +22,7 @@
 }
 .do__text:focus {
   outline: none;
+}
+.do__close {
+  cursor: pointer;
 }
